@@ -1,13 +1,13 @@
 /* Copyright (c) 2009, 2014 IBM Corp.
  *
  * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * are made available under the terms of the Eclipse Public License v2.0
  * and Eclipse Distribution License v1.0 which accompany this distribution. 
  *
  * The Eclipse Public License is available at 
- *    http://www.eclipse.org/legal/epl-v10.html
+ *    https://www.eclipse.org/legal/epl-2.0
  * and the Eclipse Distribution License is available at 
- *   http://www.eclipse.org/org/documents/edl-v10.php.
+ *   https://www.eclipse.org/org/documents/edl-v10.php
  *
  *******************************************************************************/
 
@@ -319,7 +319,7 @@ public class BasicTest {
 
     log.info("Check MqttConnectOptions defaults");
     MqttConnectOptions connOpts = new MqttConnectOptions();
-    Assert.assertEquals(new Integer(connOpts.getKeepAliveInterval()), new Integer(60));
+    Assert.assertEquals(Integer.valueOf(connOpts.getKeepAliveInterval()), Integer.valueOf(60));
     Assert.assertNull(connOpts.getPassword());
     Assert.assertNull(connOpts.getUserName());
     Assert.assertNull(connOpts.getSocketFactory());
@@ -487,6 +487,43 @@ public class BasicTest {
     Assert.assertEquals(after_count, before_thread_count + pool_size);
   }
 
+  @Test
+  public void testDisconnectForcibly() throws Exception {
+    String methodName = Utility.getMethodName();
+    LoggingUtilities.banner(log, cclass, methodName);
+
+    IMqttClient client = null;
+    try {
+      String clientId = methodName;
+      client = clientFactory.createMqttClient(serverURI, clientId);
+
+      log.info("Connecting...(serverURI:" + serverURI + ", ClientId:" + clientId);
+      client.connect();
+      boolean isConnected = client.isConnected();
+      log.info("isConnected = " + isConnected);
+      log.info("Disconnecting Forcibly with no timeout");
+      client.disconnectForcibly();
+
+      log.info("Re-Connecting...");
+      client.connect();
+      isConnected = client.isConnected();
+      log.info("isConnected = " + isConnected);
+      log.info("Disconnecting Forcibly with 2 sec timeout");
+      client.disconnectForcibly(2000, 2000);
+    }
+    catch (MqttException exception) {
+      log.log(Level.SEVERE, "caught exception:", exception);
+      Assert.fail("Unexpected exception: " + exception);
+    }
+    finally {
+      if (client != null) {
+        log.info("Close...");
+        client.close();
+      }
+    }
+  }
+
+
 
   // -------------------------------------------------------------
   // Helper methods/classes
@@ -502,7 +539,7 @@ public class BasicTest {
    */
   class MessageListener implements MqttCallback {
 
-    ArrayList<MqttMessage> messages;
+    final ArrayList<MqttMessage> messages;
 
     public MessageListener() {
       messages = new ArrayList<MqttMessage>();
